[package]
name = "mech-html"
version = "0.0.1"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "HTML library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-machines/html"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
gitlab = { repository = "mech-lang/machines/html", branch = "main" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {git = "https://gitlab.com/mech-lang/core", branch = "v0.1-beta"}
mech-utilities = {git = "https://gitlab.com/mech-lang/utilities", branch = "v0.1-beta"}

crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"

hashbrown = "0.12.3"
wasm-bindgen = "0.2.78"
bincode = "1.3.3"
js-sys = "0.3.55"
miniz_oxide = "0.5.1"
base64 = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'KeyboardEvent',
  'TouchEvent',
  'Event',
  'EventTarget',
  'CanvasRenderingContext2d',
  'Node',
  'Window',
  'Selection',
  'Range',
  'HtmlCollection',
  'WebSocket',
  'MessageEvent',
  'BinaryType',
  'Blob',
  'ErrorEvent',
  'ProgressEvent',
  'HashChangeEvent',
  'FileReader',
  'Location',
  'console',
  'XmlHttpRequest',
]
